--- a/thebaud-sheima-a3-project/thebaud-sheima-a3-project.csproj
+++ b/thebaud-sheima-a3-project/thebaud-sheima-a3-project.csproj
@@ -23,4 +23,23 @@
     <PackageReference Include="Raylib-cs" Version="7.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MohawkGame2D\Texture\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="MohawkGame2D\Texture\bigmet.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="MohawkGame2D\Texture\lucywalk1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="MohawkGame2D\Texture\lucywalk2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="MohawkGame2D\Texture\smallmet.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
